php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39702 php crashes in the allocator
Submitted: 2006-12-01 13:51 UTC Modified: 2006-12-01 15:33 UTC
From: zippel at linux-m68k dot org Assigned: dmitry (profile)
Status: Closed Package: Reproducible crash
PHP Version: 5.2.0 OS: linux-m68k
Private report: No CVE-ID: None
 [2006-12-01 13:51 UTC] zippel at linux-m68k dot org
Description:
------------
Hi,

php currently crashes everytime it does something nontrivial.
I debugged the problem a bit and the problem is in the Zend allocator. The configure script produces a ZEND_MM_ALIGNMENT value of 2, but this is not enough for the allocator as it needs two bits for type information. Increasing the alignment fixes the problem.
I reported this problem also in the Debian BTS, where I also included a possible patch:
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=401129


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-12-01 14:00 UTC] tony2001@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5.2-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5.2-win32-latest.zip


 [2006-12-01 15:33 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_2
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 20:00:01 2026 UTC