Fixed bug #39702 (php crashes in the allocator on linux-m68k)